--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 hr {
-  max-width: 65px;
-  border-width: 3px;
-  border-color: #F05F44; 
+  max-width: 265px;
+  border-width: 5px;
+  border-color: yellow; 
 }
 
 .faded {
